--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,7 @@ cover/
 *.mo
 *.pot
 *.log
+*.pyc
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -95,10 +96,12 @@ __pypackages__/
 celerybeat-schedule
 celerybeat.pid
 *.sage.py
+.python-version
 .env
 env/
 venv/
 ENV/
+.bak
 env.bak/
 venv.bak/
 .spyderproject
