--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,13 +14,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python 3.7
+      - name: Set up Python 3.10
         uses: actions/setup-python@v1
         with:
-          python-version: 3.7
+          python-version: '3.10'
       - name: Install pipenv
         uses: dschep/install-pipenv-action@v1
       - name: Run tests
         run: |
-          pipenv install --dev
-          pipenv run pytest
+          pipenv install
+          pipenv run python manage.py test
