--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,6 +13,15 @@ jobs:
       max-parallel: 4
 
     steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          
       - uses: actions/checkout@v1
       - name: Set up Python 3.10
         uses: actions/setup-python@v1
@@ -24,3 +33,5 @@ jobs:
         run: |
           pipenv install
           pipenv run python manage.py test
+
+
