--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,6 +21,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Cleanup
+        run: |
+          sudo git reset --hard HEAD
           
       - uses: actions/checkout@v1
       - name: Set up Python 3.10
