Add flake8 analysis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,3 +13,4 @@ sonar.sourceEncoding=UTF-8
 sonar.python.version=3.8, 3.9, 3.10
 sonar.language=py
 sonar.exclusions=manage.py
+sonar.python.flake8.reportPaths=flake8.txt
