--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,6 +14,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.10'
+      - name: Install pipenv
+        uses: dschep/install-pipenv-action@v1
+      - name: Run tests
+        run: |
+          pipenv install
+          pipenv run python manage.py test
+          flake8 --output-file=flake8.txt
+
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: SonarCloud Scan
@@ -25,16 +38,5 @@ jobs:
         run: |
           sudo rm -rf "/home/runner/work/petter/petter/.scannerwork"
           sudo git reset --hard HEAD
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.10'
-      - name: Install pipenv
-        uses: dschep/install-pipenv-action@v1
-      - name: Run tests
-        run: |
-          pipenv install
-          pipenv run python manage.py test
 
 
