--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           pipenv install
           pipenv run python manage.py test
-          flake8 --output-file=flake8.txt
+          pipenv flake8 --output-file=flake8.txt
 
       - uses: actions/checkout@v2
         with:
