--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,7 +30,8 @@ jobs:
           pip freeze
           pipenv graph
           pipenv install flake8
-          pipenv flake8 --output-file=flake8.txt
+          pipenv run flake8 --output-file=flake8.txt
+
 
       - uses: actions/checkout@v2
         with:
