--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  petter:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -24,13 +24,17 @@ jobs:
         run: |
           pipenv install
           pipenv run python manage.py test
+      - name: Install flake8
+        run: pip install flake8
+      - name: Flake8 action
 
-      - name: Run Flake8
-        run: |
-          pipenv run flake8 --output-file=flake8.txt
+        uses: suo/flake8-github-action@v1
+        with:
+          checkName: 'flake8_py3'
 
 
-      - uses: actions/checkout@v2
+
+  - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: SonarCloud Scan
