--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  petter:
+  build:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -27,14 +27,10 @@ jobs:
       - name: Install flake8
         run: pip install flake8
       - name: Flake8 action
-
         uses: suo/flake8-github-action@v1
-        with:
-          checkName: 'flake8_py3'
 
 
-
-  - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: SonarCloud Scan
