--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,6 +28,8 @@ jobs:
         run: pip install flake8
       - name: Flake8 action
         uses: suo/flake8-github-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
       - uses: actions/checkout@v2
