--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,12 +24,22 @@ jobs:
         run: |
           pipenv install
           pipenv run python manage.py test
-      - name: Install flake8
-        run: pip install flake8
-      - name: Flake8 action
-        uses: suo/flake8-github-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v1
+      - uses: ricardochaves/python-lint@v1.4.0
+        with:
+          python-root-list: "."
+          use-pylint: false
+          use-pycodestyle: false
+          use-flake8: true
+          use-black: false
+          use-mypy: false
+          use-isort: false
+          extra-pylint-options: ""
+          extra-pycodestyle-options: ""
+          extra-flake8-options: "--output-file=flake8.txt"
+          extra-black-options: ""
+          extra-mypy-options: ""
+          extra-isort-options: ""
 
 
       - uses: actions/checkout@v2
