--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: ricardochaves/python-lint@v1.4.0
         with:
-          python-root-list: "."
+          python-root-list: ""
           use-pylint: false
           use-pycodestyle: false
           use-flake8: true
