--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,7 +2,7 @@ name: Django CI
 
 on:
   push:
-    branches: [ '*' ]
+    branches: ['*']
   pull_request:
     branches: [ master ]
 
@@ -28,8 +28,13 @@ jobs:
       - uses: ricardochaves/python-lint@v1.4.0
         with:
           python-root-list: ""
+          use-pylint: false
+          use-pycodestyle: false
           use-flake8: true
-          extra-flake8-options: "--output-file=flake8.txt --exit-zero --tee"
+          use-black: false
+          use-mypy: false
+          use-isort: false
+          extra-flake8-options: "--exit-zero"
 
 
 
