--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     rev: 3.9.2
     hooks:
       - id: flake8
-        additional_dependencies: [flake8-docstrings]
+#        additional_dependencies: [flake8-docstrings]
   - repo: https://github.com/pycqa/bandit
     rev: 1.6.2
     hooks:
