--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,5 +11,5 @@ sonar.sourceEncoding=UTF-8
 sonar.python.version=3.8, 3.9, 3.10
 sonar.language=py
 sonar.exclusions=manage.py
-sonar.python.flake8.reportPaths=*flake8.txt
+sonar.python.flake8.reportPaths=/github/workspace/flake8.txt
 sonar.python.coverage.reportPaths=coverage/xml/*coverage*.xml
