--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,45 +13,61 @@ jobs:
       max-parallel: 4
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v1
         with:
           python-version: '3.10'
+
+      - name: Check python version
+        run: |
+          python --version
+
       - name: Install pipenv
         uses: dschep/install-pipenv-action@v1
-      - name: Run tests
+
+      - name: Check pipenv environment
+        run: |
+          pipenv --version
+          pipenv --where
+          pipenv --venv
+
+      - name: Pipenv install dependencies
         run: |
           pipenv install
-          pipenv run python manage.py test
-      - uses: actions/checkout@v1
-        with:
-          clean: false
-      - uses: ricardochaves/python-lint@v1.4.0
-        with:
-          python-root-list: ""
-          use-pylint: false
-          use-pycodestyle: false
-          use-flake8: true
-          use-black: false
-          use-mypy: false
-          use-isort: false
-          extra-flake8-options: "--tee --output-file=/github/workspace/flake8.txt"
 
-
-
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          clean: false
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      - name: SonarCloud Cleanup
+      - name: Pipenv check dependencies
         run: |
-          sudo rm -rf "/home/runner/work/petter/petter/.scannerwork"
-          sudo git reset --hard HEAD
+          pipenv graph
 
-
+#      - name: Run tests
+#        run: |
+#          pipenv install
+#          pipenv run python manage.py test
+#      - uses: actions/checkout@v1
+#        with:
+#          clean: false
+#      - uses: ricardochaves/python-lint@v1.4.0
+#        with:
+#          python-root-list: ""
+#          use-pylint: false
+#          use-pycodestyle: false
+#          use-flake8: true
+#          use-black: false
+#          use-mypy: false
+#          use-isort: false
+#          extra-flake8-options: "--tee --output-file=/github/workspace/flake8.txt"
+#
+#
+#
+#      - uses: actions/checkout@v2
+#        with:
+#          fetch-depth: 0
+#          clean: false
+#      - name: SonarCloud Scan
+#        uses: SonarSource/sonarcloud-github-action@master
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
