--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,7 +41,16 @@ jobs:
           pipenv --version
           pipenv --where
           pipenv --venv
+          python -m django --version
 
+      - name: Django run migration
+        run: |
+          python -m django --version
+          python manage.py migrate
+
+      - name: Flake8
+        run: |
+          python -m flake8
 
 
 #      - name: Run tests
