--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -44,14 +44,12 @@ jobs:
 
       - name: Django run migration
         run: |
-          pipenv shell
-          python -m django --version
-          python manage.py migrate
+          pipenv run python -m django --version
+          pipenv run python manage.py migrate
 
       - name: Flake8
         run: |
-          pipenv shell
-          python -m flake8
+          pipenv run python -m flake8
 
 
 #      - name: Run tests
