--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Flake8
         run: |
-          pipenv run python -m flake8 --tee --output-file=/github/workspace/flake8.txt
+          sudo pipenv run python -m flake8 --tee --output-file=/github/workspace/flake8.txt
 
   test:
     runs-on: ubuntu-latest
@@ -72,11 +72,11 @@ jobs:
 
       - name: Flake8
         run: |
-          pipenv run python -m flake8 --tee --output-file=/github/workspace/flake8.txt
+          sudo pipenv run python -m flake8 --tee --output-file=/github/workspace/reports/flake8.txt
 
       - name: Django test
         run: |
-          pipenv run python manage.py test
+          sudo pipenv run python manage.py test
 
       - name: Download clean repo for SonarQube analysis
         uses: actions/checkout@v2
