--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -47,9 +47,9 @@ jobs:
           pipenv run python -m django --version
           pipenv run python manage.py migrate
 
-      - name: Flake8
+      - name: Flake8 test
         run: |
-          sudo pipenv run python -m flake8 --tee --output-file=/github/workspace/flake8.txt
+          pipenv flake8
 
   test:
     runs-on: ubuntu-latest
@@ -72,7 +72,7 @@ jobs:
 
       - name: Flake8
         run: |
-          sudo pipenv run python -m flake8 --tee --output-file=/github/workspace/reports/flake8.txt
+          sudo pipenv run flake8 --tee --output-file=/home/runner/work/petter/petter/reports/flake8.txt
 
       - name: Django test
         run: |
