--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -49,9 +49,9 @@ jobs:
 
       - name: Flake8 test
         run: |
-          pipenv python -m  flake8
+          pipenv run python -m flake8
 
-  test:
+  Test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -72,7 +72,7 @@ jobs:
 
       - name: Flake8
         run: |
-          sudo pipenv run python -m flake8 --tee --output-file=/home/runner/work/petter/petter/reports/flake8.txt
+          pipenv run python -m flake8 --tee --output-file=/home/runner/work/petter/petter/reports/flake8.txt
 
       - name: Django test
         run: |
