--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -74,9 +74,21 @@ jobs:
         run: |
           pipenv run python -m flake8 --tee --output-file=/home/runner/work/reports/flake8.txt
 
+      - name: Check file existence
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "/home/runner/work/reports/flake8.txt"
+
       - name: Django test
         run: |
           pipenv run python manage.py test
+
+      - name: Check file existence
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "/home/runner/work/reports/coverage.xml"
 
       - name: Download clean repo for SonarQube analysis
         uses: actions/checkout@v2
@@ -89,6 +101,21 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+      - name: Check file existence
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "/home/runner/work/reports/flake8.txt"
+
+      - name: Django test
+        run: |
+          pipenv run python manage.py test
+
+      - name: Check file existence
+        id: check_files
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "/home/runner/work/reports/coverage.xml"
 
 
 #      - name: Run tests
