--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -72,70 +72,40 @@ jobs:
 
       - name: Flake8
         run: |
-          pipenv run python -m flake8 --tee --output-file=/home/runner/work/reports/flake8.txt
-
-      - name: Check file existence
-        id: check_files1
-        uses: andstor/file-existence-action@v1
-        with:
-          files: "/home/runner/work/reports/flake8.txt"
-
-      - name: File exists
-        if: steps.check_files1.outputs.files_exists == 'true'
-        # Only runs if all of the files exists
-        run: echo All files exists!
+          pipenv run python -m flake8 --tee --output-file=home/runner/work/reports/flake8.txt
 
       - name: Django test
         run: |
           pipenv run python manage.py test
 
-      - name: Check file existence
-        id: check_files2
-        uses: andstor/file-existence-action@v1
+      - name: publish artifact
+        uses: actions/upload-artifact@v2
         with:
-          files: "/home/runner/work/reports/coverage.xml"
+          path: home/runner/work/reports/
+          name: Reports
 
-      - name: File exists
-        if: steps.check_files2.outputs.files_exists == 'true'
-        # Only runs if all of the files exists
-        run: echo All files exists!
+
+      - name: Copy reports
+        run: |
+        mkdir github/workspace/reports/
+        mv home/runner/work/reports/flake8.txt github/workspace/reports/flake8.txt
+        mv home/runner/work/reports/coverage.xml github/workspace/reports/coverage.xml
 
       - name: Download clean repo for SonarQube analysis
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
           clean: false
+
       - name: SonarCloud Scan && Upload
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Check file existence
-        id: check_files3
-        uses: andstor/file-existence-action@v1
-        with:
-          files: "/home/runner/work/reports/flake8.txt"
-
-      - name: File exists
-        if: steps.check_files3.outputs.files_exists == 'true'
-        # Only runs if all of the files exists
-        run: echo All files exists!
-
       - name: Django test
         run: |
           pipenv run python manage.py test
-
-      - name: Check file existence
-        id: check_files4
-        uses: andstor/file-existence-action@v1
-        with:
-          files: "/home/runner/work/reports/coverage.xml"
-
-      - name: File exists
-        if: steps.check_files4.outputs.files_exists == 'true'
-        # Only runs if all of the files exists
-        run: echo All files exists!
 
 
 #      - name: Run tests
