--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -62,17 +62,16 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install pipenv
+      - name: Install pipenv and dependencies
         run: |
           python -m pip install pipenv==2021.11.23
-
-      - name: Pipenv install dependencies
-        run: |
           pipenv install
 
       - name: Flake8
         run: |
-          pipenv run python -m flake8 --tee --output-file=/home/runner/work/reports/flake8.txt
+          pwd
+          pipenv run python -m flake8 --tee --output-file="/home/runner/work/reports/flake8.txt"
+          pwd
 
       - name: Django test
         run: |
@@ -90,21 +89,16 @@ jobs:
           fetch-depth: 0
           clean: false
 
-      - uses: actions/download-artifact@v2
-        with:
-          name: Reports
-          path: /github/workspace/
-
       - name: SonarCloud Scan && Upload
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-      - name: Copy reports
-        run: |
-          sudo mv /github/workspace/coverage.xml /home/runner/work/reports/coverage.xml
-          sudo mv /github/workspace/flake8.txt /home/runner/work/reports/flake8.txt
+#      - name: Copy reports
+#        run: |
+#          sudo mv /github/workspace/coverage.xml /home/runner/work/reports/coverage.xml
+#          sudo mv /github/workspace/flake8.txt /home/runner/work/reports/flake8.txt
 
 
 #      - name: Run tests
