--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -70,8 +70,12 @@ jobs:
       - name: Flake8
         run: |
           pwd
+          ls --all
           pipenv run python -m flake8 --tee --output-file="/home/runner/work/reports/flake8.txt"
           pwd
+          cd /home/runner/work/reports/
+          pwd
+          ls --all
 
       - name: Django test
         run: |
