--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -67,15 +67,19 @@ jobs:
           python -m pip install pipenv==2021.11.23
           pipenv install
 
-      - name: Flake8
-        run: |
-          pwd
-          ls --all
-          pipenv run python -m flake8 --tee --output-file="/home/runner/work/reports/flake8.txt"
-          pwd
-          cd /home/runner/work/reports/
-          pwd
-          ls --all
+#      - name: Flake8
+#        run: |
+#          pipenv run python -m flake8 --tee --output-file="/home/runner/work/reports/flake8.txt"
+      - uses: ricardochaves/python-lint@v1.4.0
+        with:
+          python-root-list: ""
+          use-pylint: false
+          use-pycodestyle: false
+          use-flake8: true
+          use-black: false
+          use-mypy: false
+          use-isort: false
+          extra-flake8-options: "--tee --output-file=/github/workspace/flake8.txt"
 
       - name: Django test
         run: |
