--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -99,6 +99,15 @@ jobs:
 
       - name: SonarCloud Scan && Upload
         uses: SonarSource/sonarcloud-github-action@master
+        with:
+          args: >
+            -Dsonar.organization=sergiuszkotecki
+            -Dsonar.projectKey=SergiuszKotecki_petter
+            -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.sources=lib/
+            -Dsonar.test.exclusions=tests/**
+            -Dsonar.tests=tests/
+            -Dsonar.verbose=true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
