--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -46,30 +46,6 @@ jobs:
         run: |
           pipenv run python -m django --version
           pipenv run python manage.py migrate
-
-      - name: Flake8 test
-        run: |
-          pipenv run python -m flake8
-
-  Test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.10'
-
-      - name: Install pipenv and dependencies
-        run: |
-          python -m pip install pipenv==2021.11.23
-          pipenv install
-
-#      - name: Flake8
-#        run: |
-#          pipenv run python -m flake8 --tee --output-file="/home/runner/work/reports/flake8.txt"
       - uses: ricardochaves/python-lint@v1.4.0
         with:
           python-root-list: ""
@@ -84,21 +60,6 @@ jobs:
       - name: Django test
         run: |
           pipenv run python manage.py test
-
-      - name: Django coverage
-        run: |
-          pipenv run coverage erase
-          pipenv run coverage run --source='.' manage.py test
-          pipenv run coverage xml --fail-under=40 --skip-empty -o coverage.xml
-          sudo mv coverage.xml /github/workspace/coverage.xml
-          cd /github/workspace/
-          ls --all
-
-      - name: publish artifact
-        uses: actions/upload-artifact@v2
-        with:
-          path: /home/runner/work/reports/
-          name: Reports
 
       - name: Download clean repo for SonarQube analysis
         uses: actions/checkout@v2
@@ -118,44 +79,8 @@ jobs:
             -Dsonar.projectName=petter
             -Dsonar.sourceEncoding=UTF-8
             -Dsonar.language=py
-            -Dsonar.python.coverage.reportPaths=/github/workspace/coverage.xml
+            -Dsonar.python.coverage.reportPaths=/home/runner/work/reports/*coverage*.xml
             -Dsonar.python.flake8.reportPaths=/github/workspace/flake8.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-#      - name: Copy reports
-#        run: |
-#          sudo mv /github/workspace/coverage.xml /home/runner/work/reports/coverage.xml
-#          sudo mv /github/workspace/flake8.txt /home/runner/work/reports/flake8.txt
-
-
-#      - name: Run tests
-#        run: |
-#          pipenv install
-#          pipenv run python manage.py test
-#      - uses: actions/checkout@v1
-#        with:
-#          clean: false
-#      - uses: ricardochaves/python-lint@v1.4.0
-#        with:
-#          python-root-list: ""
-#          use-pylint: false
-#          use-pycodestyle: false
-#          use-flake8: true
-#          use-black: false
-#          use-mypy: false
-#          use-isort: false
-#          extra-flake8-options: "--tee --output-file=/github/workspace/flake8.txt"
-#
-#
-#
-#      - uses: actions/checkout@v2
-#        with:
-#          fetch-depth: 0
-#          clean: false
-#      - name: SonarCloud Scan
-#        uses: SonarSource/sonarcloud-github-action@master
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
