--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,5 @@ sonar.sourceEncoding=UTF-8
 sonar.python.version=3.8, 3.9, 3.10
 sonar.language=py
 sonar.exclusions=manage.py
+sonar.python.coverage.reportPaths=/home/runner/work/reports/*coverage*.xml
+sonar.python.flake8.reportPaths=/github/workspace/flake8.txt
