Add new tests for views, fix minor bugs

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,6 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 sonar.python.version=3.8, 3.9, 3.10
 sonar.language=py
-sonar.exclusions=manage.py
+sonar.exclusions=manage.py, *migrations*,admin.py
 sonar.python.coverage.reportPaths=coverage/xml/*coverage*.xml
 sonar.python.flake8.reportPaths=/github/workspace/flake8.txt
