--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ flake8 = "~=4.0.1"
 pre-commit = "~=2.16.0"
 coverage = "~=6.2"
 django-coverage-plugin = "~=2.0.2"
+django-filter = "*"
 
 [dev-packages]
 faker = "*"
