--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ whitenoise = "*"
 psycopg2-binary = "==2.8.5"
 dj-database-url = "*"
 psycopg2 = "*"
+django-environ = "~=0.8.1"
 
 [dev-packages]
 faker = "*"
