--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,6 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: github_actions
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: Checkout
@@ -53,9 +63,11 @@ jobs:
           use-isort: false
           extra-flake8-options: "--tee --output-file=/github/workspace/flake8.txt"
 
+      - name: Run Django migrations
+        run: pipenv run python manage.py migrate
       - name: Django test
         run: |
-          set DJANGO_ENV=dev
+          set DJANGO_ENV=test
           pipenv run python manage.py test
 
       - name: Download clean repo for SonarQube analysis
