--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -35,6 +35,12 @@ jobs:
         run: |
           python --version
 
+      - name: Cache pip
+        uses: actions/cache@v1
+        with:
+          path: /opt/hostedtoolcache/Python/3.10.0/x64/
+          key: python-${{ hashFiles('Pipfile.lock')
+
       - name: Install pipenv
         uses: dschep/install-pipenv-action@v1
 
