--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
+      python-version: [ '3.10' ]
     services:
       postgres:
         image: postgres:latest
@@ -26,22 +27,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up Python 3.10
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
 
       - name: Check python version
         run: |
           python --version
 
-      - name: Cache pip
-        uses: actions/cache@v1
+      - name: cache pipenv
+        id: cache-pipenv
+        uses: actions/cache@v2
         with:
-          path: /opt/hostedtoolcache/Python/3.10.0/x64/
-          key: python-${{ hashFiles('Pipfile.lock')}}
+          path: ~/.local/share/virtualenvs/
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
       - name: Install pipenv
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         uses: dschep/install-pipenv-action@v1
 
       - name: Pipenv install dependencies
@@ -70,12 +73,14 @@ jobs:
           extra-flake8-options: "--tee --output-file=/github/workspace/flake8.txt"
 
       - name: Run Django migrations
+        env:
+          DJANGO_ENV:test
         run: |
-          set DJANGO_ENV=test
           pipenv run python manage.py migrate --settings=config.settings.test
       - name: Django test
+        env:
+          DJANGO_ENV:test
         run: |
-          set DJANGO_ENV=test
           pipenv run python manage.py test --settings=config.settings.test
 
       - name: Download clean repo for SonarQube analysis
