--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-      python-version: [ '3.10' ]
+      python-version: [ 3.10 ]
     services:
       postgres:
         image: postgres:latest
