--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-      python-version: [ 3.10 ]
+      matrix:
+        python-version: [3.10]
     services:
       postgres:
         image: postgres:latest
@@ -73,15 +74,15 @@ jobs:
           extra-flake8-options: "--tee --output-file=/github/workspace/flake8.txt"
 
       - name: Run Django migrations
-        env:
-          DJANGO_ENV:test
         run: |
           pipenv run python manage.py migrate --settings=config.settings.test
-      - name: Django test
         env:
           DJANGO_ENV:test
+      - name: Django test
         run: |
           pipenv run python manage.py test --settings=config.settings.test
+        env:
+          DJANGO_ENV:test
 
       - name: Download clean repo for SonarQube analysis
         uses: actions/checkout@v2
