--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.10.0, 3.10.1]
+        python-version: [3.10.1]
     services:
       postgres:
         image: postgres:latest
