--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,7 +45,7 @@ jobs:
           key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
       - name: Install pipenv
-#        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         uses: dschep/install-pipenv-action@v1
 
       - name: Pipenv install dependencies
