--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ psycopg2-binary = "==2.8.5"
 dj-database-url = "*"
 psycopg2 = "*"
 django-environ = "~=0.8.1"
+django-admin-honeypot = "~=1.1.0"
 
 [dev-packages]
 faker = "*"
