--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ dj-database-url = "*"
 psycopg2 = "*"
 django-environ = "~=0.8.1"
 django-admin-honeypot = "~=1.1.0"
+django-money = "~=2.1"
 
 [dev-packages]
 faker = "*"
