--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.10.x]
+        python-version: ['3.10.x', '3.10', '3.10.1']
     services:
       postgres:
         image: postgres:latest
@@ -37,18 +37,18 @@ jobs:
         run: |
           python --version
 
-      - name: cache pipenv
-        id: cache-pipenv
-        uses: actions/cache@v2
-        with:
-          path: ~/.local/share/virtualenvs/
-          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+#      - name: cache pipenv
+#        id: cache-pipenv
+#        uses: actions/cache@v2
+#        with:
+#          path: ~/.local/share/virtualenvs/
+#          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
 
       - name: Install pipenv
         uses: dschep/install-pipenv-action@v1
 
       - name: Pipenv install dependencies
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
+#        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           pipenv install
 
